@@ -442,7 +442,7 @@ function nodecactipicker()
         // make sure it isn't already opened
     if (!newWindow || newWindow.closed)
         {
-        newWindow = window.open("", "cactipicker", "status,scrollbars=yes,height=400,width=400");
+		newWindow = window.open("", "cactipicker", "scrollbars=1,status=1,height=400,width=400,resizable=1");
         }
 
     else if (newWindow.focus)
@@ -451,7 +451,7 @@ function nodecactipicker()
         newWindow.focus();
         }
 
-        newWindow.location = "cacti-pick.php?command=node_step1";
+        newWindow.location = "cacti-pick-ng.php?command=node_step1";
     }
 
 function show_context_help(itemid, targetid)
